@@ -1,3 +1,12 @@
+2005-05-10  Jim Evins  <evins@snaught.com>
+
+	* src/window.h:
+	* src/window.c: (gl_window_init):
+	* src/ui.h:
+	* src/ui.c: (gl_ui_new), (connect_proxy_cb), (disconnect_proxy_cb),
+	(menu_item_select_cb), (menu_item_deselect_cb):
+		Added GtkStatusbar which displays menu tooltips.
+	
 2005-05-09  Jim Evins  <evins@snaught.com>
 
 	Replaced libbonoboui with GtkUIManager for creation of basic user interface menus
